logo animate by gsap

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="nav_main flex_just-contant">
 
                             <a href="#" class=" logo custom_anchor">
-                                <img src="./img/logo.png" alt="">
+                                <img class="ball" src="./img/logo.png" alt="">
                             </a>
 
                             <a href="#" id="hamburger" class="hamburger custom_anchor">Showcase <span><i class="icon-plus"></i> </span></a>
@@ -97,6 +97,7 @@
 
 <!-- <script src="js/jquery.js"></script> -->
 <script src="js/bootstrap.bundle.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script> -->
 <script src="js/main.js"></script>
