--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                 </div><!-- /.container -->
 
                 <ul id="nav_list" class="nav_list">
-                    <li><a href="#" class="nav_list-item custom_anchor">Home</a></li>
-                    <li><a href="#" class="nav_list-item custom_anchor">Gallery</a></li>
-                    <li><a href="#" class="nav_list-item custom_anchor">Contact Us</a></li>
-                    <li><a href="#" class="nav_list-item custom_anchor">Vlogs</a></li>
-                    <li><a href="#" class="nav_list-item custom_anchor">Carrier</a></li>
-                    <li><a href="#" class="nav_list-item custom_anchor">About Us</a></li>
+                    <li class="nav_list-li"><a href="#" class="nav_list-item custom_anchor">Home</a></li>
+                    <li class="nav_list-li"><a href="#" class="nav_list-item custom_anchor">Gallery</a></li>
+                    <li class="nav_list-li"><a href="#" class="nav_list-item custom_anchor">Contact Us</a></li>
+                    <li class="nav_list-li"><a href="#" class="nav_list-item custom_anchor">Vlogs</a></li>
+                    <li class="nav_list-li"><a href="#" class="nav_list-item custom_anchor">Carrier</a></li>
+                    <li class="nav_list-li"><a href="#" class="nav_list-item custom_anchor">About Us</a></li>
                 </ul>
             </nav>
 
