worked on site logo animation and nav behaviour

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body id="body">
 
     <div class="site_wrapper">
 
@@ -87,36 +87,17 @@
 
                 <div class="container sm">
 
-                    <div class="intro_row-wrapper">
+                    
+                    <div class="intro_inner">
 
-                        <div class="row row_A">
-                            <div class="col-md-6">
-                                <h2>We Make <br> Everything</h2>
-                            </div>
-                        </div>
-    
-                        <div class="row row_B">
-                            <div class="col-md-6">
-                                <p>Lorem ipsum dolor sit Lorem <br> adipisicing elit Lorem ipsum dolor sit
-                                    <br> tempore culpa eligendi. Natus.</p>
-                            </div>
-                        </div>
-
-                    </div><!-- /.intro_row-wrapper -->
-
-                    <div class="intro_inner1">
-
-                        <!-- <h2>We Make <br> Everything
+                        <h2>We Make <br> Everything
 
                             <span>
                                 Lorem ipsum dolor sit Lorem ipsum dolor sit <br> adipisicing elit Lorem ipsum dolor sit
                                 <br> tempore culpa eligendi. Natus.
                             </span>
 
-                        </h2> -->
-
-
-
+                        </h2>
 
 
                     </div><!-- /.intro_inner -->
@@ -256,10 +237,14 @@
 
 
     <!-- <script src="js/jquery.js"></script> -->
-    <script src="js/bootstrap.bundle.js"></script>
+    <!-- <script src="js/bootstrap.bundle.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script> -->
+
+    <!-- <script src="./js/bootstrap.bundle.js"></script> -->
     <script src="js/main.js"></script>
 
 
